# paludis-hooks

./: CMakeLists.txt  ChangeLog.md  LICENSE  README.md  TODO.md  get-ebuild-for  print-ebuild-path
auto-patch/: auto-patch.bash.in  auto-patch.conf.in
cmake/modules/: AddFSMTest.cmake  AddShellFunctionsTest.cmake  run_shell_test.cmake.in
conf.d/: cave.conf
config-cache-cleaner/: config-cache-cleaner.bash.in
env.d/: 90cave
filesystem-manager/: CMakeLists.txt  filesystem-manager.bash.in  filesystem-manager.conf.example.in  filesystem-manager.conf.in  filesystem-manager.dtd  filesystem-manager.xsl  sample.xml  test.sh
filesystem-manager/commands/: .cmd-rm.sh.kate-swp  cmd-mkdir.sh  cmd-mv.sh  cmd-rm-inverted.sh  cmd-rm-reverse.sh  cmd-rm.sh  cmd-symlink.sh  cmd-use-pretend.sh  cmd-use.sh
filesystem-manager/test/: CMakeLists.txt  exec-transform.cmake.in  run-cmd-test.bash.in  run-cmd-test.cmake.in  run-test.cmake.in  update-expected-output.cmake.in
filesystem-manager/test/cmd-mkdir-test-1/: run_test.sh.in
filesystem-manager/test/cmd-mv-not-existed-target/: run_test.sh.in
filesystem-manager/test/cmd-mv-test-1/: run_test.sh.in
filesystem-manager/test/cmd-mv-test-2/: run_test.sh.in
filesystem-manager/test/cmd-rm-dummy-dir/: run_test.sh.in
filesystem-manager/test/cmd-rm-not-existed-target/: run_test.sh.in
filesystem-manager/test/cmd-rm-test-1/: run_test.sh.in
filesystem-manager/test/cmd-rm-test-2/: run_test.sh.in
filesystem-manager/test/cmd-rm-with-starglobe/: run_test.sh.in
filesystem-manager/test/cmd-symlink-not-existed-base/: run_test.sh.in
filesystem-manager/test/cmd-symlink-test-1/: run_test.sh.in
filesystem-manager/test/cmd-symlink-test-2/: run_test.sh.in
filesystem-manager/test/commands-renderer/: expected.output  input.xml.in
filesystem-manager/test/matching/: expected.output  input.xml.in
filesystem-manager/test/matching-partial/: expected.output  input.xml.in
package.env/: default-deps-trk.conf  default-silent-rules.conf  extra-optimize.conf  ld-no-gc-sections.conf  ld-no-hash-style.conf  ld-no-new-dtags.conf  ld-no-sort-common.conf  lto.conf  max-debug.conf  no-debug.conf  no-gc-sections.conf  no-gnu-tls.conf  no-lto.conf  no-modern-c++.conf  setup_pkg_env.bash.in  spam.conf  use-bfd-linker.conf  use-gold-linker.conf  use-latest-gcc.conf  use-modern-c++.conf
profile.d/: 00-make-completion-wrapper.sh  cave-addons.sh  cave-aliases.sh
workdir-tmpfs/: workdir-tmpfs.bash.in  workdir-tmpfs.conf.in
workdir-tmpfs-mount/: workdir-tmpfs-mount.bash.in
